--- a/create_user_docker_java_tools_ebs.yml
+++ b/create_user_docker_java_tools_ebs.yml
@@ -1,6 +1,6 @@
 ---
 - name: Setup user, install Docker, Java, and development tools
-  hosts: localhost
+  hosts: all
   connection: ssh
   become: yes
   gather_facts: yes
