--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,11 @@ jobs:
 
       - name: Install Packer
         run: |
-          wget https://releases.hashicorp.com/packer/1.5.6/packer_1.5.6_linux_amd64.zip -O packer.zip
-          unzip packer.zip
-          sudo mv packer /usr/local/bin/
-          rm packer.zip
+          # wget https://releases.hashicorp.com/packer/1.5.6/packer_1.5.6_linux_amd64.zip -O packer.zip
+          # unzip packer.zip
+          # sudo mv packer /usr/local/bin/
+          # rm packer.zip
+          sudo apt-get update && sudo apt-get install -y packer
 
       - name: Install Ansible
         run: |
