--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,12 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: echo "AWS credentials are set."
+      - name: Set Commit ID
+        id: set_commit_id
+        run: echo "COMMIT_ID=${GITHUB_SHA::8}"
+
+      - name: Debug COMMIT_ID
+        run: echo "COMMIT_ID=${{ steps.set_commit_id.outputs.COMMIT_ID }}"
 
       - name: Initialize Packer
         run: |
@@ -45,7 +51,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           DISTRO_PUBLIC_KEY: ${{ secrets.DISTRO_PUBLIC_KEY }}
+          COMMIT_ID: ${{ steps.set_commit_id.outputs.COMMIT_ID }}
         run: |
-          COMMIT_ID=${GITHUB_SHA::8}
           packer build -var "public_key=${DISTRO_PUBLIC_KEY}" -var "commit_id=${COMMIT_ID}" ubuntu-ami.pkr.hcl
 
