--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: Create AMI with Packer and Ansible
 
 on:
-  push:
-    branches: [master]
+  # push:
+  #   branches: [master]
+  workflow_dispatch:
 
 jobs:
   build-ami:
