--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,10 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: echo "AWS credentials are set."
+      
+      - name: Set Commit ID
+        id: set_commit_id
+        run: echo "COMMIT_ID=${GITHUB_SHA::8}"
 
       - name: Initialize Packer
         run: |
