--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,6 @@ jobs:
       #     sudo apt update
       #     sudo apt install -y ansible
 
-      - name: Set Commit ID
-        id: set_commit_id
-        run: echo "COMMIT_ID=${GITHUB_SHA::8}"
-
-      - name: Debug COMMIT_ID
-        run: echo "COMMIT_ID=${{ steps.set_commit_id.outputs.COMMIT_ID }}"
-
       - name: Set up AWS Credentials
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -44,7 +37,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           DISTRO_PUBLIC_KEY: ${{ secrets.DISTRO_PUBLIC_KEY }}
-          COMMIT_ID: ${{ steps.set_commit_id.outputs.COMMIT_ID }}
         run: |
+          COMMIT_ID=${GITHUB_SHA::8}
           packer build -var "public_key=\"${DISTRO_PUBLIC_KEY}\"" -var "commit_id=${COMMIT_ID}" ubuntu-ami.pkr.hcl
 
