--- a/create_user_docker_java_tools_ebs.yml
+++ b/create_user_docker_java_tools_ebs.yml
@@ -44,7 +44,7 @@
     
     - name: Set ssh private key for the new file
       copy:
-        dest: /home/distro/.ssh/id_ed25519         # Ensure this matches the path above
+        dest: /home/distro/.ssh/id_rsa         # Ensure this matches the path above
         content: "{{ private_key }}"  # Replace `your_variable` with the actual variable name containing the content
         owner: distro
         group: distro
