--- a/ansible-base-software.yml
+++ b/ansible-base-software.yml
@@ -137,7 +137,7 @@
     - name: Install Kubernetes components
       shell: |
         curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
-        echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" > /etc/apt/sources.list.d/kubernetes.list
+        echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.31/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list
         apt-get update
         apt-get install -y kubelet kubeadm kubectl
       args:
