--- a/ansible-base-software.yml
+++ b/ansible-base-software.yml
@@ -134,9 +134,11 @@
     - name: Set Git global user email
       command:
         cmd: git config --global user.email distro@s-its.com
+        
     - name: Install Kubernetes components
       shell: |
-        curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
+        apt-get install -y apt-transport-https ca-certificates curl gpg
+        curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.31/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
         echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.31/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list
         apt-get update
         apt-get install -y kubelet kubeadm kubectl
